# MegaDB-Web

./: Cargo.toml  README.md
crates/megaweb-app/: Cargo.toml
crates/megaweb-app/src/: lib.rs  storage.rs
crates/megaweb-app/src/components/: chart.rs  codemirror.rs  mod.rs  pod_card.rs  query_plan.rs  result_table.rs  schema_tree.rs  sidebar.rs  storage_panel.rs  toast.rs
crates/megaweb-app/src/pages/: connections.rs  k8s_dashboard.rs  monitoring.rs  schema_browser.rs  settings.rs  sql_editor.rs
crates/megaweb-app/src/state/: connection.rs  k8s.rs  mod.rs  query.rs  schema.rs  toast.rs  websocket.rs
crates/megaweb-server/: Cargo.toml
crates/megaweb-server/src/: config.rs  main.rs  websocket.rs
crates/megaweb-server/src/proxy/: k8s.rs  megadb.rs  mod.rs  prometheus.rs
crates/megaweb-types/: Cargo.toml
crates/megaweb-types/src/: connection.rs  lib.rs
docker/: Dockerfile  docker-compose.yml
js/: codemirror-bridge.js
style/: main.css
